--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -1,5 +1,6 @@
 $green: #6ea820;
 $gray: #878787;
+$bg-gray: #f7f7f7;
 
 
 @import "./media.scss";
@@ -15,3 +16,4 @@ $gray: #878787;
 @import "./partners.scss";
 @import "./testimonials.scss";
 @import "./footer.scss";
+@import "./plants-products.scss";
