--- a/app/css/popular-products.scss
+++ b/app/css/popular-products.scss
@@ -102,7 +102,16 @@
 .product-block__img {
     display: block;
     width: 100%;
-
+    position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	max-width: 100%;
+	max-height: 100%;
+    margin: auto;
+    object-fit: contain;
+    
     @include tablets {
         width: 100%;
     }
@@ -115,6 +124,9 @@
 .product-block__link {
     display: block;
     position: relative;
+    padding-bottom: 90%;
+    overflow: hidden;
+    
 }
 
 .product-block-content {
