--- a/app/css/featured-products.scss
+++ b/app/css/featured-products.scss
@@ -94,8 +94,12 @@
         margin-right: 0;
     }
 
+    .product-block-content {
+        width: 100%;
+    }
 
-    .popular-product-block__title {
+
+    .product-block__title {
         margin: 0;
         border: none;
         padding: 0;
@@ -110,8 +114,7 @@
     }
 
     .product-options {
-        left: 0;
-
+        right: 0;
     }
 
     &:hover {
@@ -130,7 +133,7 @@
 
 .featured-product-card__link {
     display: block;
-    max-width: 160px;
+    width: 160px;
     height: 135px;
     margin-right: 15px;
 
