--- a/app/css/main-header.scss
+++ b/app/css/main-header.scss
@@ -6,6 +6,7 @@ body {
     font-weight: 400;
     line-height: 26px;
     letter-spacing: 0.5px;
+    overflow-x: hidden;
 }
 ul {
     margin: 0;
@@ -19,6 +20,7 @@ p {
 a {
     text-decoration: none;
 }
+
 button {
     cursor: pointer;
 }
