--- a/app/css/services.scss
+++ b/app/css/services.scss
@@ -1,7 +1,7 @@
 .services-list {
     padding: 30px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     padding-bottom: 80px;
 
     @include phones {
@@ -17,6 +17,7 @@
     padding: 40px 30px;
     background:#ffffff;
     align-items: center;
+    margin-right: 20px;
 
     &:hover {
         box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
