стилизация страницы товара

--- a/app/css/popular-products.scss
+++ b/app/css/popular-products.scss
@@ -119,6 +119,8 @@
 
 .product-block {
     background-color: #ffffff;
+    padding: 0 5px;
+    box-sizing: border-box;
 }
 
 .product-block__link {
