--- a/app/css/history.scss
+++ b/app/css/history.scss
@@ -21,7 +21,7 @@
 
 .history-block__description {
     text-align: center;
-    font-size: 13px;
+    font-size: $font-small;
     font-weight: 400;
     letter-spacing: 1px;
     color:#808080;
