--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -3,6 +3,8 @@ $gray: #878787;
 $bg-gray: #f7f7f7;
 $font-gray: #555555;
 $border-color: #e0e0e0;
+$font-normal: 14px;
+$font-small: 13px;
 
 
 @import "./media.scss";
