--- a/app/css/testimonials.scss
+++ b/app/css/testimonials.scss
@@ -78,7 +78,7 @@
 .testimonial__name-link {
     letter-spacing: 0.8px;
     color: #497015;
-    font-size: 14px;
+    font-size: $font-normal;
     text-transform: uppercase;
     font-weight: 500;
     position: relative;
