--- a/app/css/plants-products.scss
+++ b/app/css/plants-products.scss
@@ -66,7 +66,7 @@
     color:#000;
     text-transform: uppercase;
     padding: 15px 20px;
-    font: 600 14px/18px;
+    font: 600 $font-normal/18px;
     letter-spacing: 1px;
     font-weight: 600;
 
@@ -107,7 +107,7 @@
     padding: 4px 0;
     color: #262626;
     text-transform: capitalize;
-    font-size: 14px;
+    font-size: $font-normal;
     font-weight: normal;
     width: 100%;
 
@@ -154,7 +154,7 @@
 
 .filter__title {
     color:#000000;
-    font-size: 14px;
+    font-size: $font-normal;
     font-weight: 500;
     text-transform: capitalize;
 }
@@ -329,7 +329,7 @@
     color:#333;
     display: block;
     padding: 5px 15px;
-    font-size: 14px;
+    font-size: $font-normal;
     border: 2px solid#e6e6e6;
     background-color:#fff;
 
@@ -519,7 +519,7 @@
 
 .pagination__link {
     position: relative;
-    padding: 7px 14px;
+    padding: 7px $font-normal;
     color: #ffffff;
     background-color: #000000;
 
