--- a/app/css/popular-products.scss
+++ b/app/css/popular-products.scss
@@ -170,7 +170,7 @@
     padding-bottom: 12px;
     a {
         color:#000000;
-        font-size: 13px;
+        font-size: $font-small;
         text-decoration: none;
         font-weight: 400;
         text-transform: capitalize;
@@ -196,7 +196,7 @@
         color:gray;
         text-decoration: line-through;
         margin-left: 5px;
-        font-size: 13px;
+        font-size: $font-small;
         font-weight: 400;
         display: inline-block;
         line-height: 20px;
@@ -260,7 +260,7 @@
     white-space: nowrap;
     padding: 8px 30px 8px;
     text-transform: uppercase;
-    font-size: 13px;
+    font-size: $font-small;
     letter-spacing: 0.5px;
     line-height: 22px;
     color:#ffffff;
