--- a/app/css/services.scss
+++ b/app/css/services.scss
@@ -88,14 +88,14 @@
     margin-bottom: 3px;
     letter-spacing: 0.5px;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: $font-normal;
     font-weight: 700;
     color:#000000;
     text-align: center;
 }
 
 .services-item__description {
-    font-size: 13px;
+    font-size: $font-small;
     letter-spacing: 0.6px;
     font-weight: 400;
     line-height: 22px;
